[tool.poetry]
name = "youtube-analytics-project1"
version = "0.1.0"
description = ""
authors = ["igornast <grezle00@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project1"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.86.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
